--- a/resources/buildspec-anchore.yaml
+++ b/resources/buildspec-anchore.yaml
@@ -1,11 +1,7 @@
 version: 0.2
 env:
     variables:
-        AWS_DEFAULT_REGION: us-east-1
-        IMAGE_REPO_NAME: aws-prueba
         DOCKER_BUILDKIT: "1"
-        ECR_REGISTRY: "459137896070.dkr.ecr.us-east-1.amazonaws.com"
-        AWS_ACCOUNT_ID: 459137896070
 phases:
   install:
     commands:
@@ -35,25 +31,24 @@ phases:
       - TAG="$CODEBUILD_RESOLVED_SOURCE_VERSION"
       - docker tag $IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION $REPOSITORY_URI:latest
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
-      - cat anchore-reports/aws-prueba_*-vuln.json
   post_build:
     commands:
       - |
-        jq "{ \"messageType\": \"CodeScanReport\", \"reportType\": \"ANCHORE\", \"createdAt\": $(date +\"%Y-%m-%dT%H:%M:%S.%3NZ\"), \"source_repository\": \"$CODEBUILD_SOURCE_REPO_URL\", \"source_branch\": \"$CODEBUILD_SOURCE_VERSION\", \"build_id\": \"$CODEBUILD_BUILD_ID\", \"source_commitid\": \"$CODEBUILD_RESOLVED_SOURCE_VERSION\", \"report\": . }" anchore-reports/aws-prueba_*-vuln.json > payload.json
+        jq "{ \"messageType\": \"CodeScanReport\", \"reportType\": \"ANCHORE\", \"createdAt\": $(date +\"%Y-%m-%dT%H:%M:%S.%3NZ\"), \"source_repository\": \"$CODEBUILD_SOURCE_REPO_URL\", \"source_branch\": \"$CODEBUILD_SOURCE_VERSION\", \"build_id\": \"$CODEBUILD_BUILD_ID\", \"source_commitid\": \"$CODEBUILD_RESOLVED_SOURCE_VERSION\", \"report\": . }" anchore-reports/aws-security-day-roxsross_*-vuln.json > payload.json
       - echo ""
       - |
         if (grep -E 'High|Critical' payload.json); then 
-          aws lambda invoke --function-name ImpToSecurityHubEKS --payload file://payload.json anchore-reports/aws-prueba_*-vuln.json && echo "LAMBDA_SUCCEDED" || echo "LAMBDA_FAILED";
+          aws lambda invoke --function-name ImpToSecurityHubEKS --payload file://payload.json anchore-reports/aws-security-day-roxsross_*-vuln.json && echo "LAMBDA_SUCCEDED" || echo "LAMBDA_FAILED";
           echo "There are critical or high vulnerabilities.. failing the build"
           docker push $REPOSITORY_URI:latest
           
         elif (grep -E 'Medium' payload.json); then
-          aws lambda invoke --function-name ImpToSecurityHubEKS --payload file://payload.json anchore-reports/aws-prueba_*-vuln.json && echo "LAMBDA_SUCCEDED" || echo "LAMBDA_FAILED";
+          aws lambda invoke --function-name ImpToSecurityHubEKS --payload file://payload.json anchore-reports/aws-security-day-roxsross_*-vuln.json && echo "LAMBDA_SUCCEDED" || echo "LAMBDA_FAILED";
           docker push $REPOSITORY_URI:latest
         else
           docker push $REPOSITORY_URI:latest
         fi
-      - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
+      - printf '[{"name":"hello-aws-security-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   type: zip
   files: '**/*'
