--- a/resources/buildspec-deploy-eb.yaml
+++ b/resources/buildspec-deploy-eb.yaml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${ECR_REGISTRY}
   pre_build:
     commands:
       - echo Entered the pre_build phase...
