--- a/resources/buildspec-deploy-eb.yaml
+++ b/resources/buildspec-deploy-eb.yaml
@@ -12,6 +12,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Building the Docker image...
+      - echo $IMAGE_REPO_NAME:$CODEBUILD_SOURCE_VERSION
       - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_SOURCE_VERSION .
       - docker tag $IMAGE_REPO_NAME:$CODEBUILD_SOURCE_VERSION $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_SOURCE_VERSION
   post_build:
