--- a/resources/buildspec-trivy-scan.yaml
+++ b/resources/buildspec-trivy-scan.yaml
@@ -12,14 +12,19 @@ phases:
       - "dpkg -i trivy_0.1.6_Linux-64bit.deb"
   pre_build:
     commands:
-      - "$(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)"
-      - "docker build -t $docker_img_name:$docker_tag ."
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${ECR_REGISTRY}
+      - echo $(date +%Y-%m-%d-%H-%M) > /tmp/timestamp
+      - echo $(cat /tmp/timestamp)
+      - TAG="DEVEL-$(cat /tmp/timestamp)"
+      - echo Building the Docker image...
+      - echo $IMAGE_REPO_NAME:$TAG
+      - docker build -t $IMAGE_REPO_NAME:$TAG .
   build:
     commands:
-      - trivy -f json -o results.json --exit-code 0 --severity HIGH,MEDIUM,LOW --quiet --auto-refresh $docker_img_name:$docker_tag
-      - trivy -f json -o results.json --exit-code 1 --severity HIGH,CRITICAL --quiet --auto-refresh $docker_img_name:$docker_tag
-      - docker tag $docker_img_name:$docker_tag $ecr_repo:latest
-      - docker push $ecr_repo:latest
+      - trivy -f json -o results.json --exit-code 0 --severity HIGH,MEDIUM,LOW --quiet --auto-refresh $IMAGE_REPO_NAME:$TAG
+      - trivy -f json -o results.json --exit-code 1 --severity HIGH,CRITICAL --quiet --auto-refresh $IMAGE_REPO_NAME:$TAG
+      - docker tag $IMAGE_REPO_NAME:$TAG $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
+      - docker push $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
   post_build:
     commands:
       - echo trivy scan completed on `date`
