--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -12,6 +12,7 @@ phases:
       - echo Build started on `date`
       - echo Scanning with gitleaks...
       - git init
+      - git config --global init.defaultBranch master
       - gitleaks detect --report-format json --report-path gitleaks.json 
 
   post_build:
