--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -10,9 +10,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Scanning with gitleaks...
+      - echo Scanning with gitleaks $CODE_BRANCH...
       - git init
       - git config --global init.defaultBranch master
+      - git branch -m $CODE_BRANCH
       - gitleaks detect --report-format json --report-path gitleaks.json 
 
   post_build:
