--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -11,9 +11,9 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
-      - git init
-      - git config --global init.defaultBranch master
-      - git branch -m $CODE_BRANCH
+      - git clone https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
+      - cd ${GITHUB_REPOSITORY}
+      - ls -lrt
       - gitleaks detect --report-format json --report-path gitleaks.json 
 
   post_build:
