--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,7 +13,6 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - git clone https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
-      - ls -lrt
       - gitleaks detect --report-format json --report-path gitleaks.json 
 
   post_build:
@@ -21,4 +20,4 @@ phases:
       - echo Build completed on `date`
       - cat gitleaks.json 
 artifacts:
-  files: gitleaks.json 
+  files: ${GITHUB_REPOSITORY}/gitleaks.json 
