--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
-      - git clone https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
+      - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
       - gitleaks detect --report-format json --report-path gitleaks.json 
 
