--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,11 +13,12 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --report-format json --report-path gitleaks.json 
+      - gitleaks detect --baseline-path gitleaks.json  --report-format json --report-path findings.json 
 
   post_build:
     commands:
       - echo Build completed on `date`
-      - cat gitleaks.json 
+      - cat gitleaks.json
+      - cat findings.json 
 artifacts:
-  files: ${GITHUB_REPOSITORY}/gitleaks.json 
+  files: ${GITHUB_REPOSITORY}/findings.json 
