--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,6 +13,7 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
+      - gitleaks detect --report-path --report-format json gitleaks-report.json
       - gitleaks detect --baseline-path gitleaks.json  --report-format json --report-path findings.json 
 
   post_build:
