--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,13 +13,11 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --report-path --report-format json gitleaks-report.json
-      - gitleaks detect --baseline-path gitleaks.json  --report-format json --report-path findings.json 
+      - gitleaks detect --no-git --report-path --report-format json gitleaks-report.json
 
   post_build:
     commands:
       - echo Build completed on `date`
-      - cat gitleaks.json
-      - cat findings.json 
+      - cat gitleaks-report.json
 artifacts:
-  files: ${GITHUB_REPOSITORY}/findings.json 
+  files: ${GITHUB_REPOSITORY}/gitleaks-report.json
