--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -18,6 +18,6 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - cat gitleaks-report.json
+      - cat ${GITHUB_REPOSITORY}/gitleaks-report.json
 artifacts:
   files: ${GITHUB_REPOSITORY}/gitleaks-report.json
