--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -14,10 +14,12 @@ phases:
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
       - gitleaks detect --no-git --report-path --report-format json gitleaks-report.json
+      - ls -lrt
 
   post_build:
     commands:
       - echo Build completed on `date`
-      - cat ${GITHUB_REPOSITORY}/gitleaks-report.json
+      - cd ${GITHUB_REPOSITORY}
+      - cat gitleaks-report.json
 artifacts:
   files: ${GITHUB_REPOSITORY}/gitleaks-report.json
