--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -14,12 +14,11 @@ phases:
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
       - gitleaks detect --no-git --report-path --report-format json gitleaks-report.json
-      - ls -lrt
+      - cat gitleaks-report.json
 
   post_build:
     commands:
       - echo Build completed on `date`
-      - cd ${GITHUB_REPOSITORY}
-      - cat gitleaks-report.json
+      - ls -lrt
 artifacts:
-  files: ${GITHUB_REPOSITORY}/gitleaks-report.json
+  files: $GITHUB_REPOSITORY/gitleaks-report.json
