--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,12 +13,13 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       - cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --no-git --report-path --report-format json gitleaks-report.json
+      - gitleaks detect --no-git --report-format json gitleaks-report.json
       - cat gitleaks-report.json
 
   post_build:
     commands:
       - echo Build completed on `date`
       - ls -lrt
+      - cat $GITHUB_REPOSITORY/gitleaks-report.json
 artifacts:
   files: $GITHUB_REPOSITORY/gitleaks-report.json
