--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -11,8 +11,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
-      - git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
-      - cd ${GITHUB_REPOSITORY}
+      #- git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
+      #- cd ${GITHUB_REPOSITORY}
       - gitleaks detect --no-git --report-format json gitleaks-report.json
       - cat gitleaks-report.json
 
@@ -20,6 +20,6 @@ phases:
     commands:
       - echo Build completed on `date`
       - ls -lrt
-      - cat $GITHUB_REPOSITORY/gitleaks-report.json
+      - cat gitleaks-report.json
 artifacts:
-  files: $GITHUB_REPOSITORY/gitleaks-report.json
+  files: gitleaks-report.json
