--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,8 +13,7 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       #- git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       #- cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --no-git --report-format json gitleaks-report.json
-      - cat gitleaks-report.json
+      - gitleaks detect --no-git -v --report-format json --report-path gitleaks-report.json
 
   post_build:
     commands:
