--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -11,9 +11,10 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
+      - rm -rf gitleaks-report.json
       #- git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
       #- cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --no-git -v --report-format json --report-path gitleaks-report.json
+      - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json
 
   post_build:
     commands:
