--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -12,9 +12,19 @@ phases:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
       - rm -rf gitleaks-report.json
-      #- git clone -b ${CODE_BRANCH} https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY_OWNER}/${GITHUB_REPOSITORY}.git
-      #- cd ${GITHUB_REPOSITORY}
-      - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json
+      - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json --exit-code 0
+      - echo "Build started on $(date)"
+      - git clone https://github.com/awslabs/git-secrets
+      - cd git-secrets
+      - make install
+      - cd $CODEBUILD_SRC_DIR
+      - ls -lrta
+      - cd git-secrets
+      - git secrets --install
+      - git secrets --register-aws
+      ## Adding additional patterns, for example password
+      #- git secrets --add password\s*=\s*.+
+      - git secrets --scan -r .
 
   post_build:
     commands:
@@ -23,3 +33,5 @@ phases:
       - cat gitleaks-report.json
 artifacts:
   files: gitleaks-report.json
+  type: zip
+  files: '**/*'
