--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -13,11 +13,13 @@ phases:
       - echo Scanning with gitleaks $CODE_BRANCH...
       - rm -rf gitleaks-report.json
       - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json --exit-code 0
+      - gitleaks detect --baseline-path gitleaks-report.json --report-path findings.json --no-git --verbose 
 
   post_build:
     commands:
       - echo Build completed on `date`
       - ls -lrt
       - cat gitleaks-report.json
+      - cat findings.json
 artifacts:
-  files: gitleaks-report.json
+  files: findings.json
