--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -12,8 +12,8 @@ phases:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
       - rm -rf gitleaks-report.json
+      - rm -rf .git
       - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json --exit-code 0
-      - gitleaks detect --baseline-path gitleaks-report.json --report-path findings.json --no-git --verbose 
 
   post_build:
     commands:
