--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -18,8 +18,5 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - ls -lrt
-      - cat gitleaks-report.json
-      - cat findings.json
 artifacts:
-  files: findings.json
+  files: gitleaks-report.json
