--- a/resources/buildspec-secrets.yaml
+++ b/resources/buildspec-secrets.yaml
@@ -11,9 +11,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Scanning with gitleaks $CODE_BRANCH...
-      - rm -rf gitleaks-report.json
-      - rm -rf .git
-      - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json --exit-code 0
+      - gitleaks detect --no-git --verbose --report-format json --report-path gitleaks-report.json
 
   post_build:
     commands:
